--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://julimpark.github.io/iffhomepage/'
 languageCode = 'en-us'
-title = '수학클리닉 ✚🞦 필요와충분'
+title = '수학클리닉 ✚ 필요와충분'
 theme = 'itheme'
